--- a/DoAnZ/Views/Admin/ChiTietDonHang.cshtml
+++ b/DoAnZ/Views/Admin/ChiTietDonHang.cshtml
@@ -17,12 +17,12 @@
     <div class="form-group">
         <label for="status">Chọn trạng thái mới:</label>
         <select name="status" class="form-control">
-            <option value="Pending">Chờ xử lý</option>
-            <option value="Confirmed">Đã xác nhận</option>
-            <option value="Cancelled">Đã hủy</option>
+            <option value="Chờ xử lý">Chờ xử lý</option>
+            <option value="Đã xác nhận">Đã xác nhận</option>
+            <option value="Đã hủy">Đã hủy</option>
         </select>
     </div>
 
     <button type="submit" class="btn btn-primary">Lưu thay đổi</button>
+    <button type="Admin/DSDH" class="btn btn-primary">Trở về</button>
 </form>
-
