--- a/DoAnZ/Views/Home/Search.cshtml
+++ b/DoAnZ/Views/Home/Search.cshtml
@@ -75,9 +75,7 @@
                                     <button class="btn btn-outline-dark">
                                         <i class="bi-cart-fill me-1"></i> Add to Cart
                                     </button>
-                                    <button class="btn btn-outline-dark">
-                                        <i class="bi-cart-fill me-1"></i> Back
-                                    </button>
+                                    <a href="/" class="btn btn-outline-dark">Back</a>
                                 </a>
                             </div>
                         </div>
