--- a/DoAnZ/Views/Home/Shop.cshtml
+++ b/DoAnZ/Views/Home/Shop.cshtml
@@ -180,12 +180,12 @@
                     <div class="d-flex m-3 me-0">
                         <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
                         <a href="#" class="position-relative me-4 my-auto">
-                           <form class="d-flex">
-                        <button asp-action ="Index" asp-controller ="ShoppingCart" class="btn btn-outline-dark" type="submit">
+                            <form class="d-flex">
+                                <button asp-action="Index" asp-controller="ShoppingCart" class="btn btn-outline-dark" type="submit">
                                     <i class="fa fa-shopping-bag fa-2x"></i>
                                     <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
-                        </button>
-                    </form>  
+                                </button>
+                            </form>
                         </a>
                         <a href="#" class="my-auto">
                             <i class="fas fa-user fa-2x"></i>
@@ -324,10 +324,6 @@
 
                     </div>
                     <div class="col-lg-6">
-                        <div class="position-relative mx-auto">
-                            <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="email" id="inputEmail" placeholder="Your Email">
-                            <button type="button" onclick="redirectToRegister()" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
-                        </div>
                     </div>
 
 
@@ -346,8 +342,7 @@
                     <div class="footer-item">
                         <h4 class="text-light mb-3">Why People Like us!</h4>
                         <p class="mb-4">
-                            typesetting, remaining essentially unchanged. It was
-                            popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.
+                            FreshFoodStore là một cửa hàng trực tuyến cung cấp các sản phẩm tươi sống chất lượng cao. Chúng tôi cam kết mang lại cho khách hàng những sản phẩm tươi ngon nhất, từ rau củ quả cho đến thực phẩm động vật. Với chúng tôi, sự tươi mới và chất lượng luôn được đặt lên hàng đầu.
                         </p>
                         <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
                     </div>
@@ -355,31 +350,26 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
                         <h4 class="text-light mb-3">Shop Info</h4>
-                        <a class="btn-link" href="">About Us</a>
-                        <a class="btn-link" href="">Contact Us</a>
-                        <a class="btn-link" href="">Privacy Policy</a>
-                        <a class="btn-link" href="">Terms & Condition</a>
-                        <a class="btn-link" href="">Return Policy</a>
-                        <a class="btn-link" href="">FAQs & Help</a>
+                        <a class="btn-link" href="/Home/Hethongsieuthi">Giới thiệu về chúng tôi</a>
+                        <a class="btn-link" href="/Home/contact">Liên hệ với chúng tôi</a>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
                         <h4 class="text-light mb-3">Account</h4>
-                        <a class="btn-link" href="">My Account</a>
-                        <a class="btn-link" href="">Shop details</a>
-                        <a class="btn-link" href="">Shopping Cart</a>
-                        <a class="btn-link" href="">Wishlist</a>
-                        <a class="btn-link" href="">Order History</a>
-                        <a class="btn-link" href="">International Orders</a>
+                        <a class="btn-link" href="/Home/Shop">Shopping</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-item">
                         <h4 class="text-light mb-3">Contact</h4>
-                        <p>Address: 1429 Netus Rd, NY 48247</p>
-                        <p>Email: Example@gmail.com</p>
-                        <p>Phone: +0123 4567 8910</p>
+                        <p>
+                            Địa chỉ:Đại Học Hutech Khu E
+                            VQ4P+249, Phường Tân Phú, Quận 9, Thành phố Hồ Chí Minh, Việt Nam
+                        </p>
+                        <p>Email: prolakhoasd@gmail.com</p>
+                        <p>Phone: +84 838 40 7070</p>
                         <p>Payment Accepted</p>
                         <img src="img/payment.png" class="img-fluid" alt="">
                     </div>
