--- a/DoAnZ/Views/Home/contact.cshtml
+++ b/DoAnZ/Views/Home/contact.cshtml
@@ -87,7 +87,6 @@
                 color: #007bff; /* Màu icon khi hover */
             }
 
-     
     </style>
 </head>
 
@@ -121,14 +120,14 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Hethongsieuthi">Hệ Thống</a>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="contact">Liên Hệ</a>
                     </div>
-               
+
                 </div>
             </nav>
         </div>
     </div>
 
- 
-  
+
+
     <div class="container page-header py-5">
         <h1 class="text-center text-white display-6">Contact</h1>
         <ol class="breadcrumb justify-content-center mb-0">
@@ -260,7 +259,7 @@
 BUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s"
                                     loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
-                    </div>                
+                    </div>
                     <div class="col-lg-5">
                         <div class="d-flex p-4 rounded mb-4 bg-white">
                             <i class="fas fa-map-marker-alt fa-2x text-primary me-4"></i>
@@ -293,7 +292,7 @@ BUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s"
             </div>
         </div>
     </div>
-   
+
     <!-- Contact End -->
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
@@ -305,10 +304,6 @@ BUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s"
 
                     </div>
                     <div class="col-lg-6">
-                        <div class="position-relative mx-auto">
-                            <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="email" id="inputEmail" placeholder="Your Email">
-                            <button type="button" onclick="redirectToRegister()" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
-                        </div>
                     </div>
 
 
@@ -327,8 +322,7 @@ BUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s"
                     <div class="footer-item">
                         <h4 class="text-light mb-3">Why People Like us!</h4>
                         <p class="mb-4">
-                            typesetting, remaining essentially unchanged. It was
-                            popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.
+                            FreshFoodStore là một cửa hàng trực tuyến cung cấp các sản phẩm tươi sống chất lượng cao. Chúng tôi cam kết mang lại cho khách hàng những sản phẩm tươi ngon nhất, từ rau củ quả cho đến thực phẩm động vật. Với chúng tôi, sự tươi mới và chất lượng luôn được đặt lên hàng đầu.
                         </p>
                         <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
                     </div>
@@ -336,23 +330,22 @@ BUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s"
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
                         <h4 class="text-light mb-3">Shop Info</h4>
-                        <a class="btn-link" href="">About Us</a>
-                        <a class="btn-link" href="">Contact Us</a>
-                        <a class="btn-link" href="">Privacy Policy</a>
-                        <a class="btn-link" href="">Terms & Condition</a>
+                        <a class="btn-link" href="/Home/Hethongsieuthi">Giới thiệu về chúng tôi</a>
+                        <a class="btn-link" href="/Home/contact">Liên hệ với chúng tôi</a>
+                        @*    <a class="btn-link" href="">Terms & Condition</a>
                         <a class="btn-link" href="">Return Policy</a>
-                        <a class="btn-link" href="">FAQs & Help</a>
+                        <a class="btn-link" href="">FAQs & Help</a> *@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
                         <h4 class="text-light mb-3">Account</h4>
-                        <a class="btn-link" href="">My Account</a>
+                        <a class="btn-link" href="">Shopping</a>
+                        @*   <a class="btn-link" href="">My Account</a>
                         <a class="btn-link" href="">Shop details</a>
-                        <a class="btn-link" href="">Shopping Cart</a>
                         <a class="btn-link" href="">Wishlist</a>
                         <a class="btn-link" href="">Order History</a>
-                        <a class="btn-link" href="">International Orders</a>
+                        <a class="btn-link" href="">International Orders</a> *@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -377,14 +370,14 @@ BUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s"
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>FRESHFOOD</a>, All right reserved.</span>
                 </div>
-                <div class="col-md-6 my-auto text-center text-md-end text-white">
-                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
-                </div>
+                @*  <div class="col-md-6 my-auto text-center text-md-end text-white">
+                <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
+                <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
+                <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
+                Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                </div> *@
             </div>
         </div>
     </div>
@@ -406,10 +399,10 @@ BUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s"
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script>
-    function redirectToRegister() {
-        window.location.href = "Identity/Account/Register";
-    }
-</script>
+        function redirectToRegister() {
+            window.location.href = "Identity/Account/Register";
+        }
+    </script>
 </body>
 
 </html>
